--- a/Assets/Easy Save 2/changelog.txt
+++ b/Assets/Easy Save 2/changelog.txt
@@ -1,3 +1,25 @@
+v2.8.3
+- Added Auto Save functionality for code-free saving and loading.
+- Easy Save 3 no longer targets Unity 5.5, and only works on Unity 5.6 / Unity 2017.1 and above.
+- Various bug fixes.
+- Components marked with the Serializable attribute are now serialized when attempting to serialize a GameObject.
+
+v2.8.2
+- Added cloud functionality to Easy Save 3 beta to allow uploading and downloading of files.
+- GameObject functionality now only saves explicitly supported Components.
+
+v2.8.1
+- Fixed bug in 2017.1 where web methods would always return an error.
+- Easy Save 3 beta now supports Windows Store.
+
+- IMPORTANT NOTE -
+- If you already have the Easy Save 3 beta installed, you will need to remove the Assets/Easy Save 3/ folder before updating. Easy Save 3 has moved to Assets/Plugins/Easy Save 3/.
+
+v2.8.0
+- Easy Save 3 Beta Now Available.
+- Various bug fixes.
+- Added assorted PlayMaker actions.
+
 v2.7.1
 - Now supports Playmaker 1.8 Arrays.
 - Auto Save now has the option to not automatically convert prefabs to scene objects when dragging them into a scene in the Editor.
